--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.34.0",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.28.0",
     "react-select": "^5.8.3",
